syntax = "proto3";

package auth.pb;
option go_package = "auth/api;pb";

import "google/api/annotations.proto";

service AuthService {
  // auth
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {
    option (google.api.http) = {
      post: "/v1/auth/authenticate"
      body: "*"
    };
  };
  // refresh token
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refreshToken"
      body: "*"
    };
  };
  // validate token
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/validateToken"
      body: "*"
    };
  };
}
message AuthenticateRequest {
  enum Platform {
    NONE = 0;
    WECHAT = 1;
    GOOGLE = 2;
  }
  string appId = 1;
  string username = 2;
  Platform platform = 3;
}

message AuthenticateResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message ValidateTokenRequest{
  string accessToken = 1;
}

message ValidateTokenResponse{
  string uid = 1;
}